<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/text_view_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/spacing_xxxlarge"
            android:text="@string/header_registration"
            style="@style/HeaderStyle"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_email_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_register"
            app:endIconMode="clear_text"
            style="@style/TextInputLayoutStyle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_email"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_login_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/reg_email_l"
            app:counterEnabled="true"
            app:counterMaxLength="24"
            app:endIconMode="clear_text"
            style="@style/TextInputLayoutStyle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_login_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_login"
                android:inputType="text"
                android:textDirection="locale"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_."
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_password_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/reg_login_l"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:passwordToggleEnabled="true"
            style="@style/TextInputLayoutStyle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_password"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_password_repeat_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/reg_password_l"
            app:counterEnabled="true"
            app:passwordToggleEnabled="true"
            style="@style/TextInputLayoutStyle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_password_repeat_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_rpt_password"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reg_btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="@id/reg_password_repeat_l"
            app:layout_constraintTop_toBottomOf="@id/reg_password_repeat_l"
            android:onClick="acceptClick"
            android:text="@string/btn_accept"
            style="@style/ColoredButtonStyle"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reg_btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/reg_btn_accept"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:text="@string/btn_sign_in"
            android:onClick="signInClick"
            style="@style/TextButtonStyle"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>